# app_karate_geral

./: .gitignore  README.md  app.py  config.toml  df_completo.csv  pyproject.toml  requirements.txt
